@@ -126,6 +126,7 @@ wxMSW:
 - Fix wxMenuEvent::GetMenu() for wxEVT_MENU_{OPEN,CLOSE} in MDI frames.
 - Fix updating wxSpinCtrlDouble tooltip text (Laurent Poujoulat).
 - Fix appearance of checked disabled wxToolBar tools with custom images.
+- Fix reading of not NUL-terminated strings using wxRegKey (Steffen Olszewski).
 
 wxOSX/Cocoa:
 
